# ADCS-code-for-stm32

./: .gitignore  CMakeLists.txt  attitude_determination.cpp  download_igrf.py  download_spice_kernels.py  esoq2p1.cpp  esoq2p1.py  igrf_calculator.cpp  igrf_coefficients.json  igrf_coefficients_full.json  main.cpp  q_method.cpp  q_method.py  spice_example.cpp
